tests/snapshots/examples_fixtures/type_system__failing__40_effect_alias_print_in_time_function.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/40_effect_alias_print_in_time_function.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `print`.

  examples/type_system/failing/40_effect_alias_print_in_time_function.flx:4:13
  |
4 |     let p = print
  |             ^^^^^

Hint:
  Define it first: let print = ...;

Help:
  Did you mean `p`?


error[E400]: Missing Effect

requires effect `IO` but the enclosing context does not provide it

  examples/type_system/failing/40_effect_alias_print_in_time_function.flx:5:5
  |
5 |     p("tick")
  |     ^^^^^^^^^
  |     --------- requires `IO`

Hint:
  annotate the enclosing function with `with IO`

Found 2 errors.
== stdout ==
<not executed>
